# Strage

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md
Development_Resources/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx  5.tmx  6.tmx  Big_Enemy_Explosion.xcf  Bullet_Explosion.xcf  Bulletproof_Vest.xcf  Bulletproof_Vest_Taken.xcf  Enemy_Spawner_Explosion.xcf  Enemy_Spawner_Teleportation_Effect.xcf  Head_Up_Display_Background.xcf  MacOS_Icon.icns  Machine_Gun.xcf  Machine_Gun_Taken.xcf  Objects.tsx  Scene.tsx  Small_Enemy_Explosion.xcf
Includes/: AnimatedTexture.hpp  AnimatedTextureStaticEntity.hpp  AudioManager.hpp  BigEnemyFightingEntity.hpp  BulletMovingEntity.hpp  Configuration.hpp  ControlManager.hpp  DisplayOverlayTexture.hpp  EffectManager.hpp  EnemyFightingEntity.hpp  EnemySpawnerEntity.hpp  EnemySpawnerStaticEntity.hpp  Entity.hpp  EntityAnimatedTexture.hpp  EntityAnimatedTextureBigEnemyExplosion.hpp  EntityAnimatedTextureEnemySpawnerExplosion.hpp  EntityAnimatedTextureMediumEnemyExplosion.hpp  EntityAnimatedTextureShipExplosion.hpp  EntityAnimatedTextureSmallEnemyExplosion.hpp  EntityEnemySpawner.hpp  FightingEntity.hpp  FightingEntityEnemy.hpp  FightingEntityEnemyBig.hpp  FightingEntityEnemyMedium.hpp  FightingEntityEnemySmall.hpp  FightingEntityPlayer.hpp  FileManager.hpp  GuiButton.hpp  GuiLabel.hpp  GuiMenu.hpp  HeadUpDisplay.hpp  LevelManager.hpp  Log.hpp  MainMenu.hpp  MediumEnemyFightingEntity.hpp  Menu.hpp  MovableEntity.hpp  MovableEntityBullet.hpp  MovableEntityBulletBigEnemy.hpp  MovableEntityBulletMediumEnemy.hpp  (+24 more)
(+57 files in other folders)
